--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -9,10 +9,10 @@ spec:
         generators:
           # git generator, 'child' #1
           - git:
-              repoURL: 'https://github.com/Dmitriy-Malevich/gitops-cert-level-2-examples.git'
+              repoURL: https://github.com/Dmitriy-Malevich/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-                - path: application-sets/example-apps/*
+              - path: application-sets/example-apps/*
           # cluster generator, 'child' #2
           - clusters: {}
         
