--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -4,30 +4,29 @@ metadata:
   name: cluster-git
 spec:
   generators:
-    # matrix 'parent' generator
     - matrix:
         generators:
-          # git generator, 'child' #1
           - git:
-              repoURL: "https://github.com/Dmitriy-Malevich/gitops-cert-level-2-examples.git"
+              repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-              - path: "application-sets/example-apps/*"
-          # cluster generator, 'child' #2
+                - path: application-sets/example-apps/*
           - clusters: {}
         
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
-      project: '{{metadata.labels.environment}}'
+      project: 'default'
       source:
-        repoURL: https://github.com/Dmitriy-Malevich/gitops-cert-level-2-examples.git
+        repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
         targetRevision: HEAD
         path: '{{path}}'
       destination:
         server: '{{server}}'
         namespace: '{{path.basename}}'
       syncPolicy:
-        syncOptions:
-          - CreateNamespace=true
+        automated:
+          selfHeal: true
+          allowEmpty: false
+          createNamespace: true
