--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -4,29 +4,29 @@ metadata:
   name: cluster-git
 spec:
   generators:
+    # matrix 'parent' generator
     - matrix:
         generators:
+          # git generator, 'child' #1
           - git:
-              repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
+              repoURL: https://github.com/argoproj/argo-cd.git
               revision: HEAD
               directories:
-                - path: application-sets/example-apps/*
-          - clusters: {}
-        
+                - path: applicationset/examples/matrix/cluster-addons/*
+          # cluster generator, 'child' #2
+          - clusters:
+              selector:
+                matchLabels:
+                  argocd.argoproj.io/secret-type: cluster
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
-      project: 'default'
+      project: '{{metadata.labels.environment}}'
       source:
-        repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
+        repoURL: https://github.com/argoproj/argo-cd.git
         targetRevision: HEAD
         path: '{{path}}'
       destination:
         server: '{{server}}'
         namespace: '{{path.basename}}'
-      syncPolicy:
-        automated:
-          selfHeal: true
-          allowEmpty: false
-          createNamespace: true
