--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -16,7 +16,7 @@ spec:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
-      project: 'default'
+      project: default
       source:
         repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
         targetRevision: HEAD
