--- a/image-updater/example-app/envs/staging/version.yml
+++ b/image-updater/example-app/envs/staging/version.yml
@@ -8,4 +8,4 @@ spec:
     spec:
       containers:
       - name: webserver-simple
-        image: ghcr.io/dmitriy-malevich/gitops-cert-level-2-examples:latest
+        image: ghcr.io/dmitriy-malevich/gitops-cert-level-2-examples:1.0
