--- a/custom-diff/applications/with-hpa.yml
+++ b/custom-diff/applications/with-hpa.yml
@@ -3,6 +3,11 @@ kind: Application
 metadata:
   name: hpa-example01
   namespace: argocd
+  ignoreDifferences:
+  - group: apps
+    kind: Deployment
+    jsonPointers:
+    - /spec/replicas
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
