--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   ignoreDifferences:
   - group: apps
-    kind: Deployment
+    kind: Secret
     jsonPointers:
     - /spec/secrets
   finalizers:
